**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************


Version 1.4.6 - CVS
-------------------
  - MagicHTML fix for comments in styles.
  - Multi-line encoded headers being deleted (#1394667).

Version 1.4.6 Release Candidate 1 - 10 December 2005
----------------------------------------------------
  - Added Simple Green, Silver Steel, Wood, Bluesome, Simple Green2 and
    Simple Purple themes. Contributed by Pavel Spatny, Saku Lehtio 
    (#1188209), Vicky Pyne (#1217066 and #1217069).
  - Fixes for increased error checking in PHP 5.0.5+ array_shift() (#1237160).
    [php5]
  - Added extra checks in Delivery class for In-Reply-To header. Fixes
    E_NOTICE level warnings in PHP 5.0.4 and later (#1206474). [php5]
  - Added extra checks in SquirrelMail charset_encode() function in case
    somebody removes HTML to US-ASCII conversion library (#1239782).
  - Ported devel fixes for PHP 5.0.4 E_NOTICE warnings in Message class
    (#1164045). [php5]
  - Auto Refresh Folder List preference now defaults to 10 Minutes, add
    option for 20 Minutes.
  - Fixed inline display of attached jpeg/gif/xbm attachments in Mozilla
    Firefox.
  - Fixed invalid reference in src/download.php. E_NOTICE level warnings
    could corrupt attachments in php 4.4.0.
  - Fixed error handling in SquirrelSpell plugin. sprintf and gettext
    formating errors in check_me.mod. Reported by Edward Chapman.
  - Allow configure to be ran from any directory, thanks Ceri Davies.
  - Fixed reloading the cached mailbox-tree after a purge trash action.
  - Fixed loading of external background-images in style attributes when
    show_unsafe_images is false.
  - Fix to stop deletion of mailboxes that do not exist, otherwise an
    IMAP error is generated.
  - Add missing break to listcommands plugin so unsubscribe works again.
  - Removed function references from address book database backend class,