@@ -7,6 +7,7 @@ Version 1.4.6 - CVS
 -------------------
   - MagicHTML fix for comments in styles.
   - Multi-line encoded headers being deleted (#1394667).
+  - Prohibit imap injection attempts (reported by Vicente Aguilera)
 
 Version 1.4.6 Release Candidate 1 - 10 December 2005
 ----------------------------------------------------
